compiler/testData/diagnostics/testsWithJvmBackend/duplicateJvmSignature/specialNames/innerClass.kt
// FIR_IDENTICAL
class A {
    <!DUPLICATE_CLASS_NAMES!>class B<!>
}

<!DUPLICATE_CLASS_NAMES!>class `A$B`<!>
